test/compiler/pass/_function.ods
do call = (x, y) ->
  do print("Hello, world!")
  return x + y
