test/compiler/fail/_call_func_param_num.ods
do call = (f, x) ->
  return !f(x)

do being_called = () -> return true

do call(being_called, true)
